--- a/README
+++ b/README
@@ -1,5 +1,9 @@
-CMake Qt5 GUI Template
-----------------------
+# ukuithemecustomizer
+
+A theme package creator which can package icons, cursors, wallpapers to deb files so that you can install it on Kylin OS or another distribution based on dpkg.
+
+
+# Installation
 
 You need Qt5 and CMake 2.8.11 or higher
 
@@ -11,8 +15,3 @@ make
 
 ./ukuithemecustomizer
 
-
--- Tutorials and resources --
-
-Qt online docs
-https://doc.qt.io/
